<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item android:title="General">
            <menu>
                <item
                    android:id="@+id/nav_find"
                    android:icon="@drawable/saxophon"
                    android:title="Genre" />
                <item
                    android:id="@+id/nav_location"
                    android:icon="@drawable/ic_location"
                    android:title="City" />
                <item
                    android:id="@+id/nav_time"
                    android:icon="@drawable/ic_clock"
                    android:title="Date" />
                <item
                    android:id="@+id/nav_liked"
                    android:icon="@drawable/wishlist"
                    android:title="Liked" />
                <item
                    android:id="@+id/nav_random"
                    android:icon="@drawable/random"
                    android:title="Random" />


            </menu>
        </item>

    </group>
    <item android:title="@string/extras_string">
        <menu>
            <group>
                <item
                    android:icon="@drawable/ic_mail"
                    android:title="@string/contact_us"
                    android:checkable="false"/>
                <item
                    android:icon="@drawable/ic_info"
                    android:title="@string/about_us"
                    android:checkable="false"/>
                <item
                    android:icon="@drawable/ic_star"
                    android:title="@string/rate_us"
                    android:checkable="false"/>
                <item
                    android:icon="@drawable/ic_close"
                    android:title="@string/quit"
                    android:checkable="false"/>
            </group>
        </menu>
    </item>
</menu>
